namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-one-plan-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-one-plan-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_prod"
    cloud-platform.justice.gov.uk/application: "Central Plan Management API"
    cloud-platform.justice.gov.uk/owner: "One Plan: peter.carter@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-one-plan-api"
    cloud-platform.justice.gov.uk/team-name: "one-plan"
    cloud-platform.justice.gov.uk/review-after: ""
